--- a/app/src/main/res/layout/activity_look_up.xml
+++ b/app/src/main/res/layout/activity_look_up.xml
@@ -17,12 +17,21 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/test_button"
+            android:id="@+id/get_button"
             android:layout_width="305dp"
             android:layout_height="wrap_content"
-            android:text="@string/test_text" />
+            android:text="@string/get_text" />
     </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
+        <TextView
+            android:id="@+id/screenResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </ScrollView>
 
 
 </LinearLayout>
